<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_login">

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.ectroverseapp.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/login" />

    <fragment
        android:id="@+id/nav_register"
        android:name="com.example.ectroverseapp.register.RegisterFragment"
        android:label="@string/menu_register"
        tools:layout="@layout/register" />

    <fragment
        android:id="@+id/nav_forums"
        android:name="com.example.ectroverseapp.forums.ForumsFragment"
        android:label="@string/menu_forums"
        tools:layout="@layout/forums" />
</navigation>